# sentinel

./: .gitignore  PREREGISTRATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CAMPAIGN.md  NEXT_FRONTIER_INTROSPECTIVE_PLAN_SELECTION.md
experiments/: VERIFICATION.md
experiments/iter10_brakevade/: RESULT.md  iter10_run.sh  server_patch_brakevade.py
experiments/iter11_early_evade/: HYPOTHESIS.md  RESULT.md  iter11_run.sh  server_patch_early_evade.py
experiments/iter12_plan_selection/: HYPOTHESIS.md  RESULT.md  analyze_candidates.py  cand_run.sh  patch_candidate_logging.py
experiments/iter13_rss_baseline/: HYPOTHESIS.md  RESULT.md  analyze_rss.py  rss_run.sh  server_patch_rss.py
experiments/iter1_reproduce/: PLAN.md  PROOF_smoke_0103.md  STATUS.md
experiments/iter1b_partial_baseline/: PARTIAL_BASELINE.md  sentinel_iter1b.sh
experiments/iter2_monitor/: ABLATION.md  G1_RESULT.md  HYPOTHESIS.md  RESULT.md  g1_auroc.py  sentinel_ab.sh  server_patch_ablation_modes.py  server_patch_ttc.py
experiments/iter3_progress/: RESULT.md  analyze.py  iter3_run.sh
experiments/iter4_gated/: HYPOTHESIS.md  RESULT.md  analyze.py  iter4_run.sh  server_patch_gated.py
experiments/iter5_tracked/: RESULT.md  analyze.py  iter5_run.sh  server_patch_track.py
experiments/iter6_cpa/: RESULT.md  iter6_run.sh  server_patch_cpa.py
experiments/iter7_margin/: RESULT.md  iter7_run.sh
experiments/iter8_union/: RESULT.md  iter8_run.sh  server_patch_union.py
sentinel/: __init__.py  monitor.py
tests/: test_monitor.py  test_scaffold.py
(+36 files in other folders)
